# Grapher

./: main.py  metrics.py  pyproject.toml
data/: data_loader.py  dataset.py  graph_tokenizer.py  make_docstring_ast_dataset.py  preprocess_data.py  rdf.py
misc/: utils.py
model/: grapher.py  litgrapher.py  model_loader.py  text2graph_generation_models.py
scripts/: download_genwiki.sh  download_tekgen.sh  download_text_to_code.sh  download_webnlg2020.sh  download_wikigraphs.sh  freebase_preprocess.py  process_genwiki_data.py  process_tekgen_data.py  process_webnlg2020_data.py  process_wikigraphs_data.py  test.sh  train.sh
